; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_ra_serf/extr_replay.c_replay_done.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_ra_serf/extr_replay.c_replay_done.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.revision_report_t = type { i32, i32*, i32*, %struct.TYPE_6__* }
%struct.TYPE_6__ = type { %struct.TYPE_5__, i64 }
%struct.TYPE_5__ = type { i32 }

@TRUE = common dso_local global i32 0, align 4
@SVN_NO_ERROR = common dso_local global i32* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32*, i8*, i32*)* @replay_done to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @replay_done(i32* %0, i8* %1, i32* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca %struct.revision_report_t*, align 8
  %9 = alloca %struct.TYPE_6__*, align 8
  store i32* %0, i32** %5, align 8
  store i8* %1, i8** %6, align 8
  store i32* %2, i32** %7, align 8
  %10 = load i8*, i8** %6, align 8
  %11 = bitcast i8* %10 to %struct.revision_report_t*
  store %struct.revision_report_t* %11, %struct.revision_report_t** %8, align 8
  %12 = load %struct.revision_report_t*, %struct.revision_report_t** %8, align 8
  %13 = getelementptr inbounds %struct.revision_report_t, %struct.revision_report_t* %12, i32 0, i32 3
  %14 = load %struct.TYPE_6__*, %struct.TYPE_6__** %13, align 8
  store %struct.TYPE_6__* %14, %struct.TYPE_6__** %9, align 8
  %15 = load %struct.TYPE_6__*, %struct.TYPE_6__** %9, align 8
  %16 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %15, i32 0, i32 1
  %17 = load i64, i64* %16, align 8
  %18 = icmp ne i64 %17, 0
  br i1 %18, label %19, label %23

19:                                               ; preds = %3
  %20 = load %struct.TYPE_6__*, %struct.TYPE_6__** %9, align 8
  %21 = load i32*, i32** %7, align 8
  %22 = call i32* @svn_ra_serf__server_error_create(%struct.TYPE_6__* %20, i32* %21)
  store i32* %22, i32** %4, align 8
  br label %55

23:                                               ; preds = %3
  %24 = load %struct.TYPE_6__*, %struct.TYPE_6__** %9, align 8
  %25 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %24, i32 0, i32 0
  %26 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %25, i32 0, i32 0
  %27 = load i32, i32* %26, align 8
  %28 = icmp ne i32 %27, 200
  br i1 %28, label %29, label %33

29:                                               ; preds = %23
  %30 = load %struct.TYPE_6__*, %struct.TYPE_6__** %9, align 8
  %31 = call i32 @svn_ra_serf__unexpected_status(%struct.TYPE_6__* %30)
  %32 = call i32* @svn_error_trace(i32 %31)
  store i32* %32, i32** %4, align 8
  br label %55

33:                                               ; preds = %23
  br label %34

34:                                               ; preds = %33
  %35 = load i32, i32* @TRUE, align 4
  %36 = load %struct.revision_report_t*, %struct.revision_report_t** %8, align 8
  %37 = getelementptr inbounds %struct.revision_report_t, %struct.revision_report_t* %36, i32 0, i32 2
  %38 = load i32*, i32** %37, align 8
  store i32 %35, i32* %38, align 4
  %39 = load %struct.revision_report_t*, %struct.revision_report_t** %8, align 8
  %40 = getelementptr inbounds %struct.revision_report_t, %struct.revision_report_t* %39, i32 0, i32 1
  %41 = load i32*, i32** %40, align 8
  %42 = icmp ne i32* %41, null
  br i1 %42, label %43, label %49

43:                                               ; preds = %34
  %44 = load %struct.revision_report_t*, %struct.revision_report_t** %8, align 8
  %45 = getelementptr inbounds %struct.revision_report_t, %struct.revision_report_t* %44, i32 0, i32 1
  %46 = load i32*, i32** %45, align 8
  %47 = load i32, i32* %46, align 4
  %48 = add nsw i32 %47, -1
  store i32 %48, i32* %46, align 4
  br label %49

49:                                               ; preds = %43, %34
  %50 = load %struct.revision_report_t*, %struct.revision_report_t** %8, align 8
  %51 = getelementptr inbounds %struct.revision_report_t, %struct.revision_report_t* %50, i32 0, i32 0
  %52 = load i32, i32* %51, align 8
  %53 = call i32 @svn_pool_destroy(i32 %52)
  %54 = load i32*, i32** @SVN_NO_ERROR, align 8
  store i32* %54, i32** %4, align 8
  br label %55

55:                                               ; preds = %49, %29, %19
  %56 = load i32*, i32** %4, align 8
  ret i32* %56
}

declare dso_local i32* @svn_ra_serf__server_error_create(%struct.TYPE_6__*, i32*) #1

declare dso_local i32* @svn_error_trace(i32) #1

declare dso_local i32 @svn_ra_serf__unexpected_status(%struct.TYPE_6__*) #1

declare dso_local i32 @svn_pool_destroy(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
